// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`importedAssetIds should nest import trees of dependencies 1`] = `
Object {
  "importTree": Object {
    "BASE": Object {},
    "LayerA": Object {
      "BASE": Object {},
    },
  },
  "namespaceMap": Object {
    "VORTEX": "BASE#VORTEX",
    "Welcome": "LayerA#Welcome",
  },
  "scopeMap": Object {
    "VORTEX": "ROOM#VORTEX",
    "Welcome": "ROOM#12345",
  },
}
`;

exports[`importedAssetIds should return scopedIds and aggregate of import trees for dependencies 1`] = `
Object {
  "importTree": Object {
    "BASE": Object {},
  },
  "namespaceMap": Object {
    "VORTEX": "BASE#VORTEX",
    "Welcome": "BASE#Welcome",
  },
  "scopeMap": Object {
    "VORTEX": "ROOM#VORTEX",
    "Welcome": "ROOM#12345",
  },
}
`;
